[package]
name = "rustycoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
snafu = "0.7.4"
tokio = { version = "1.25.0", features = ["fs"] }
uuid = { version = "1.3.0", features = ["v4"] }
